# SEMAS

./: .gitignore  AGENTS.md  CLAUDE.md  OPERATION_LOG.md  README.md  SEMAS_ARA_Architecture.md  SEMAS_Plugin_Evolution_Analysis.md  SEMAS_SELF_UPGRADE_DESIGN.md  SEMAS_SIA_Integration_Design.md  conftest.py  plan_mingli5agents.md  pyproject.toml  requirements.txt
.codex/: instructions.md
ai_video_evolver/: README.md  __init__.py  bootstrap.py  demo.py  executor.py  mutator.py  pyproject.toml  run_video_evolution.py
ai_video_evolver/agents/: asset_generator.yaml  critic.yaml  editor.yaml  prompt_engineer.yaml  scriptwriter.yaml
ai_video_evolver/evaluator/: __init__.py  metrics.py
ai_video_evolver/examples/: sample_task.yaml
ai_video_evolver/tools/: __init__.py  critic_functions.py  ffmpeg_pipeline.py  prompt_templates.py  video_api_client.py
ai_video_evolver/topologies/: video_pipeline.yaml
china_a_share_alpha/: README.md  __init__.py  demo.py  executor.py  pyproject.toml  run_factor_loop.py  run_factor_mining.py  run_portfolio_evolution.py
china_a_share_alpha/backtest/: __init__.py  long_short_backtest.py
china_a_share_alpha/data/: __init__.py  alpha101.py  prefetch_enriched.py  qlib_loader.py  sector_mapping.py  synthetic.py  talib_features.py  tushare_loader.py
china_a_share_alpha/evaluator/: __init__.py  metrics.py  neutralizer.py
china_a_share_alpha/evolution/: __init__.py  enhanced_factor_mutator.py  factor_mutator.py  factor_optimizer.py  llm_mutator.py
china_a_share_alpha/examples/: enhanced_loop_config.yaml  enhanced_loop_config_fast.yaml  enhanced_loop_config_fast2.yaml  enhanced_loop_config_quick.yaml  enhanced_loop_config_robust.yaml  enhanced_loop_config_val.yaml  loop_config.yaml  portfolio_config.yaml  qlib_config.yaml  sample_config.yaml  sample_factor_library.csv  tushare_factors.py  tushare_loop_config.yaml
china_a_share_alpha/factor/: __init__.py  expression.py  parser.py
china_a_share_alpha/loop/: decay_monitor.py  enhanced_population.py  population.py  portfolio.py
(+250 files in other folders)
