[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-evolver"
version = "0.1.0"
description = "An evolvable scaffold for end-to-end AI video generation agents, built on SEMAS."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_video_evolver*"]
