[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "china-a-share-alpha"
version = "0.1.0"
description = "An evolvable scaffold for China A-share alpha factor mining, built on SEMAS and compatible with Qlib."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9.0"]
talib = ["TA-Lib>=0.4.32"]
all = ["pyqlib>=0.9.0", "TA-Lib>=0.4.32"]

[tool.setuptools.packages.find]
where = ["."]
include = ["china_a_share_alpha*"]
